<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_to_do"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dfreeman.bettertodolist.view.AddNewToDoActivity">

    <EditText
        android:id="@+id/enter_name"
        android:inputType="textPersonName"
        android:hint="@string/enterToDoName"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/pickStartDate"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_name"
        android:text="@string/pickStartDate"
        android:onClick="showStartDatePickerDialog" />

    <Button
        android:onClick="showEndDatePickerDialog"
        android:text="@string/pickEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickStartDate"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/pickEndDate"/>

    <Button
        android:text="@string/pickEndTime"
        android:id="@+id/pickEndTime"
        android:layout_below="@+id/pickEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showTimePickerDialog" />

    <Button
        android:onClick="showRemDatePickerDialog"
        android:text="@string/setReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickEndTime"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/setReminder" />

    <Button
        android:text="@string/clearReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setReminder"
        android:id="@+id/clearReminder"
        android:onClick="onClearReminder" />

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/done_creating"
        android:onClick="onDoneCreating"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pickStartDate"
        android:layout_toEndOf="@+id/pickStartDate"
        android:layout_marginBottom="14dp"
        android:id="@+id/startDate" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pickEndDate"
        android:layout_toEndOf="@+id/pickEndDate"
        android:layout_marginBottom="14dp"
        android:id="@+id/endDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pickEndTime"
        android:layout_toEndOf="@+id/pickEndTime"
        android:layout_marginBottom="14dp"
        android:id="@+id/endTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/setReminder"
        android:layout_toEndOf="@+id/setReminder"
        android:layout_marginBottom="14dp"
        android:id="@+id/reminder" />

</RelativeLayout>
